adding gallery section and for now i go eat some pasta

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 
 <body id="top">
 
+    <!--**************************************************-->
+
     <div id="hero">
         <div class="background-image"></div>
         <h1>Ruben's folio</h1>
         <h3>Some code, some website take a look </h3>
         <a href="#" rel="noopener noreferrer" class="btn"> show more</a>
     </div>
+
     <!--**************************************************-->
+
     <div id="about">
         <h3 class="title">About me</h3>
         <div id="two-cols">
@@ -40,13 +44,21 @@
         </div>
         <hr>
     </div>
-
-
-
-
-
-
-
+    <!--**************************************************-->
+    <div id="gallery" class="photo-gallery">
+        <h3 class="title">Gallery</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+            voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+            velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            <hr>
+            <ul class="grid">
+                <li class="small" style="background-image: url('img/o-a-la-bouche.png')"></li>
+                <li class="large" style="background-image: url('img/perfect-picture.png')"></li>
+                <li class="small" style="background-image: url('img/office-strasbourg.jpg')"></li>
+                <li class="large" style="background-image: url('img/web-agency.png')"></li>
+            </ul>
+    </div>
+    <hr>
     <!--**************************************************-->
     <footer id="social-media">
         <ul>
@@ -70,6 +82,8 @@
         <p>&ldquo; Tell me and I forget, teach me and i may remember, involve me and i learn.&rdquo; <br>
             &mdash;Benjamin Franklin</p>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
