back in the game, adding few lines in copy dot text , and begining the getting around section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <style>
+        #getting-around {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
 
+        #getting-around ul {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 60px;
+
+        }
     </style>
 </head>
 
@@ -39,7 +53,7 @@
                     voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
                     velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
             </div>
-            
+
             <p>&nbsp;</p>
         </div>
         <hr>
@@ -50,15 +64,53 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
             voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
             velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
-            <hr>
-            <ul class="grid">
-                <li class="small" style="background-image: url('img/o-a-la-bouche.png')"></li>
-                <li class="large" style="background-image: url('img/perfect-picture.png')"></li>
-                <li class="small" style="background-image: url('img/office-strasbourg.jpg')"></li>
-                <li class="large" style="background-image: url('img/web-agency.png')"></li>
-            </ul>
+        <hr>
+        <ul class="grid">
+            <li class="small" style="background-image: url('img/o-a-la-bouche.png')"></li>
+            <li class="large" style="background-image: url('img/perfect-picture.png')"></li>
+            <li class="small" style="background-image: url('img/office-strasbourg.jpg')"></li>
+            <li class="large" style="background-image: url('img/web-agency.png')"></li>
+        </ul>
     </div>
     <hr>
+    <!--**************************************************-->
+    <div id="getting-around">
+        <h3 class="title">Ways of travelling</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+            voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+            velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+        <ul class="grid">
+            <li>
+                <i class="fab fa-html5"> </i>
+                <h4> HTML5 </h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+            <li>
+                <i class="fab fa-css3"> </i>
+                <h4> CSS </h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+            <li>
+                <i class="fab fa-js"> </i>
+                <h4> JavaScript </h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+            <li>
+                <i class="fab fa-java"> </i>
+                <h4> Java</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+        </ul>
+    </div>
+
     <!--**************************************************-->
     <footer id="social-media">
         <ul>
