finishing the getting around section

--- a/index.html
+++ b/index.html
@@ -11,21 +11,7 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <style>
-        #getting-around {
-            text-align: center;
-            max-width: 800px;
-            margin: 0 auto;
-        }
 
-        #getting-around ul {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 60px;
-
-        }
     </style>
 </head>
 
@@ -75,35 +61,56 @@
     <hr>
     <!--**************************************************-->
     <div id="getting-around">
-        <h3 class="title">Ways of travelling</h3>
+        <h3 class="title">Technologies</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
             voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
             velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
         <ul class="grid">
             <li>
-                <i class="fab fa-html5"> </i>
+                <i class="fab fa-html5 ico" style="color: #e44e23;"> </i>
                 <h4> HTML5 </h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
                     voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
                     velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
             </li>
             <li>
-                <i class="fab fa-css3"> </i>
+                <i class="fab fa-css3 ico" style="color: #0070ba;"> </i>
                 <h4> CSS </h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
                     voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
                     velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
             </li>
             <li>
-                <i class="fab fa-js"> </i>
+                <i class="fab fa-js ico" style="color: #e79c32;"> </i>
                 <h4> JavaScript </h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
                     voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
                     velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
             </li>
             <li>
-                <i class="fab fa-java"> </i>
+                <i class="fab fa-node-js ico" style="color: #8bc84c;"> </i>
+                <h4> Node js</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+            <li>
+                <i class="fab fa-java ico" style="color: #e44e23;"> </i>
                 <h4> Java</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+            <li>
+                <i class="fab fa-git ico" style="color: #000;"> </i>
+                <h4> Git</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
+                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
+                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+            </li>
+            <li>
+                <i class="fab fa-linux ico" style="color: #000;"> </i>
+                <h4> Linux addict</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
                     voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
                     velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
@@ -121,11 +128,9 @@
                 <a href="#"><i class="fab fa-linkedin" style="color: #0077b5; "></a></i>
             </li>
             <li>
-                <a href="#"><i class="fab fa-youtube-square"></a></i>
+                <a href="#"><i class="fab fa-soundcloud" style="color: #ff5601"></a></i>
             </li>
-            <li>
-                <a href="#"><i class="fab fa-pinterest-square"></a></i>
-            </li>
+
         </ul>
         <p>&copy;
             <script>
