adding few images and lil things

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <h2><a href="#top" target="_blank" rel="noopener noreferrer"><img src="" alt="logo"></a></h2>
     <nav>   
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#getting-around">Technologies</a></li>
-            <li><a href="#famous-quotes">Where i learn</a> </li>
-            <li><a href="#map">Find me</a></li>
+            <li><a href="#about">À propos</a></li>
+            <li><a href="#gallery">Réalisation</a></li>
+            <li><a href="#getting-around">Technologie</a></li>
+            <li><a href="#famous-quotes">Ils m'ont appris</a> </li>
+            <li><a href="#map">Trouvez-moi</a></li>
             <li><a href="#contact-forms">Contact</a></li>
         </ul>
 
@@ -48,15 +48,36 @@
     <!--**************************************************-->
 
     <div id="about">
-        <h3 class="title">About me</h3>
+        <h3 class="title">À propos</h3>
         <div id="two-cols">
             <div class="about-image">
                 <img src="img/me.jpg" alt="that's pic of me" style="max-width: 100%; ">
             </div>
             <div class="about-bio">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p> &ldquo;Passionné par l'informatique depuis l'âge de sept ans,
+                    j'ai aujourd'hui décidé de faire de cette passion mon métier.&ldquo; </br>
+                    <strong>Pourquoi pas plus tôt ? </strong></br>
+                    Simplement un choix de vie, ayant passé un très grand nombre d'heures à explorer le web,
+                    à essayer diverses technologies, j'ai décidé de partir dans d'autres métiers afin d'explorer autres choses.<br/>
+                    Aujourd'hui le contexte a changé, la demande au fil des années devient de plus en plus
+                    forte et mes compétences peuvent être plus utiles que jamais.<br/>
+                    
+                    J'ai commencé par démonter, remonter des ordinateurs.<br/>
+                    Diagnostique de panne réparation avec les moyens du bord.<br/>
+                    J'aime encore aujourd'hui mettre les mains dans le cambouis,
+                    enlever des composants les changer, pousser les limites de mon matériel,
+                    tester recommencer ... <br/>
+                    Au niveau software j'ai bien évidemment au fil des bugs du remettre mes compétences en question.<br/>
+                    Rechercher des solutions par moi-même grâce au WorldWideWeb,
+                    les mettre en pratique et souvent corriger les problèmes que j'ai pu rencontrer,
+                    j'ai bien évidemment essuyé quelques échecs balayés par de nombreuses réussites.<br/>
+                    
+                    <strong>Mais et la programmation dans cette histoire ?</strong><br/>
+                    Effectivement et je serais honnête avec vous et moi-même,
+                    la logique de la programmation n'est pas instinctive chez moi,
+                    j'ai souvent et je bataille encore avec les langages afin d'en
+                    comprendre toutes les mécanique.<br/>
+                    Néanmoins je fais preuve d'une motivation importante et d'un d'acharnement certain.</p>
             </div>
 
             <p>&nbsp;</p>
@@ -65,10 +86,8 @@
     </div>
     <!--**************************************************-->
     <div id="gallery" class="photo-gallery">
-        <h3 class="title">Gallery</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-            voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-            velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+        <h3 class="title">Réalisation</h3>
+        <p>Vous trouverez ci-dessous mes diverses réalisations</p>
         <hr>
         <ul class="grid">
             <li class="small" style="background-image: url('img/o-a-la-bouche.png')"></li>
@@ -80,10 +99,10 @@
     <hr>
     <!--**************************************************-->
     <div id="getting-around">
-        <h3 class="title">Technologies</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-            voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-            velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+        <h3 class="title">Technologie</h3>
+        <p>J'ai au fil de mon apprentissage qui reste d'ailleur constant, découvert et apréhender de nombreuses technologies
+            Je décrit brièvement ce que je sais sur celle ci dans cette section.
+        </p>
         <ul class="grid">
             <li>
                 <i class="fab fa-html5 ico" style="color: #e44e23;"> </i>
@@ -140,7 +159,7 @@
     <!--**************************************************-->
     <div id="famous-quotes">
         <hr>
-        <h3 class="title"> Where i learn</h3>
+        <h3 class="title"> Ils m'ont appris</h3>
 
         <p class="portrait"><img src="img/openClassroom.png" alt="website openclassroom" class="portrait-photos"></p>
         <p class="quote">&ldquo; Make education accessible &rdquo;</p>
