changing few texte

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         crossorigin="" />
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="main.css">
+    
     <style>
 
     </style>
@@ -60,7 +61,7 @@
                     Simplement un choix de vie, ayant passé un très grand nombre d'heures à explorer le web,
                     à essayer diverses technologies, j'ai décidé de partir dans d'autres métiers afin d'explorer autres choses.<br/>
                     Aujourd'hui le contexte a changé, la demande au fil des années devient de plus en plus
-                    forte et mes compétences peuvent être plus utiles que jamais.<br/>
+                    forte et mes compétences peuvent être utiles plus que jamais.<br/>
                     
                     J'ai commencé par démonter, remonter des ordinateurs.<br/>
                     Diagnostique de panne réparation avec les moyens du bord.<br/>
@@ -107,51 +108,59 @@
             <li>
                 <i class="fab fa-html5 ico" style="color: #e44e23;"> </i>
                 <h4> HTML5 </h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>J'ai réalisé au fil de mon apprentissage de nombreux site statique, cela ma permit de comprendre 
+                    ce langage et d'approfondir ma manière de mémoriser les diverses syntaxe et balise de celui-ci.
+                </p>
             </li>
             <li>
                 <i class="fab fa-css3 ico" style="color: #0070ba;"> </i>
                 <h4> CSS </h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>Le cascading style sheet, ma permit de comprendre plusieurs aspects dans le design des sites,
+                    Comprendre les calques, rendre les sites accessibles sur les divers media et pour tout les utilisateur handicap ou non.
+                    La mises en place de visuel cohérent autant pour l'interface que pour l'utilisation ma permit,
+                    de me mettre a la place de l'utilisateur.
+                </p>
             </li>
             <li>
                 <i class="fab fa-js ico" style="color: #e79c32;"> </i>
                 <h4> JavaScript </h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>Javascript n'est pas le langages qui ma initié a l'algorithmie, il ma parcontre permis de dynamiser 
+                    mon site au travers de manipulation du DOM, j'ai ainsi pus crée au travers de ce langages en vanilla 
+                    ou avec des framework, des animation dynamique, ainsi que de la gestion d'api pour mettre à jours du contenus.
+                </p>
             </li>
             <li>
                 <i class="fab fa-node-js ico" style="color: #8bc84c;"> </i>
                 <h4> Node js</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>Node js , est un langage orientée serveur, il ma permet de comprendre l'arrière boutique d'un site,
+                    gestion de base de donnée, mise en place de formulaire, création d'interface de login et autre.
+                </p>
             </li>
             <li>
                 <i class="fab fa-java ico" style="color: #e44e23;"> </i>
                 <h4> Java</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>Java est le langages qui ma permit d'apprendre l'algorithmie, avec celui ci j'ai découvert de nombreuse facette de la
+                    programmation. 
+                    Variable, typage, Classe et extension de celle-ci.
+                </p>
             </li>
             <li>
                 <i class="fab fa-git ico" style="color: #000;"> </i>
                 <h4> Git</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>La création de projet en groupe est une part très importante de la programmation, 
+                    la création de dépot est essentielle au bon fonctionnement d'un projet.
+                    Git est l'outils idéale pour la mises en place de dépot et la gestion des version de celui-ci. 
+                    J'ai également vus et mis en pratique la gestion des branche, la fusion de celle-ci avec la branche courante.
+                </p>
             </li>
             <li>
                 <i class="fab fa-linux ico" style="color: #000;"> </i>
                 <h4> Linux addict</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur eius ipsa cumque,
-                    voluptatum soluta saepe sed nam dolore pariatur voluptate dolor error iusto,
-                    velit rerum? Magnam sunt unde doloremque voluptatibus.</p>
+                <p>J'utilise linux depuis de nombreuses année, j'ai tester diverses distribution dans mon jeune age.
+                    Open suse, arch linux, fedora, debian(kubuntu, ubuntu).
+                    J'ai par ces divers test également découvert le shell et les diverses automatisation des taches répétitive au travers de script. 
+                    J'utilise aujourd'hui zsh avec son extension (oh my zsh), qu'un de mes mentors ma conseiller.
+                </p>
             </li>
         </ul>
     </div>
